# ghidra_rust

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  libdisplay_type_casts.rlib  liboverlay_painter.rlib  rust-toolchain.toml
ghidra-app/: Cargo.toml
ghidra-app/src/: exporter.rs  lib.rs  loader.rs  main.rs  server.rs
ghidra-app/src/exporter/: ascii.rs  binary.rs  gdt.rs  gzf.rs  html_export.rs  intel_hex.rs  legacy.rs  line_dispenser.rs  mod.rs  options.rs  original_file.rs  program_text_writer.rs  traits.rs  xml.rs
ghidra-app/src/util/: mod.rs
ghidra-bsim/: Cargo.toml
ghidra-bsim/src/: bsim_plugin.rs  bsim_service.rs  lib.rs  mod.rs
ghidra-bsim/src/gui/: b_sim_search_plugin.rs  b_sim_server_manager.rs  filter_extended.rs  filter_types.rs  filters.rs  mod.rs  overview.rs  overview_model.rs  results.rs  server_manager.rs
ghidra-bsim/src/query/: abstract_sql_function_database.rs  additional_protocol.rs  b_sim_client_factory.rs  b_sim_control_launchable.rs  b_sim_db_connect_task_manager.rs  b_sim_filter.rs  b_sim_h2_file_db_connection_manager.rs  b_sim_initializer.rs  b_sim_jdbc_data_source.rs  b_sim_launchable.rs  b_sim_postgres_db_connection_manager.rs  b_sim_query.rs  b_sim_server_info.rs  b_sim_sql_clause.rs  b_sim_vector_store_manager.rs  bsim_control_launchable.rs  bsim_data_source.rs  bsim_db_connect_task_manager.rs  bsim_initializer.rs  bsim_missing_types.rs  bsim_plugin_package.rs  bsim_postgres_connection_manager.rs  bsim_query_service.rs  bsim_search_service.rs  bsim_server_info.rs  bulk_signatures.rs  cached_statement.rs  cached_tables.rs  callgraph_entry.rs  callgraph_table.rs  cancelled_sql_exception.rs  category_record.rs  child_match_record.rs  client.rs  client_sql.rs  compare_signatures.rs  configuration.rs  database_info.rs  database_information.rs  decompile_function_task.rs  (+99 more)
ghidra-bsim/tests/: bsim_new_modules_tests.rs
ghidra-build/: Cargo.toml
ghidra-build/src/: build_database.rs  build_database_factory.rs  language_spec.rs  language_spec_factory.rs  lib.rs
ghidra-build/src/doclets/: json_doclet.rs  mod.rs  python_type_stub.rs  rst_table.rs
ghidra-build/src/launch/: app_config.rs  java_finder.rs  java_version.rs  launch_properties.rs  mod.rs
ghidra-build/src/markdown/: mod.rs
ghidra-build/src/skeleton/: mod.rs
ghidra-core/: Cargo.toml
ghidra-core/src/: error.rs  lib.rs
ghidra-core/src/addr/: address_error.rs  address_factory.rs  address_iterator.rs  address_map_impl.rs  address_object_map.rs  address_range_comparator.rs  address_range_impl.rs  chunker.rs  collectors.rs  default_address_factory.rs  generic_address_space.rs  global_namespace.rs  global_symbol.rs  immutable_address_set.rs  key_range.rs  label_info.rs  mod.rs  old_generic_namespace_address.rs  overlay_address_space.rs  protected_address_space.rs  range_splitter.rs  segmented_address.rs  segmented_address_space.rs  set_collection.rs  set_mapping.rs  set_view.rs  set_view_adapter.rs  single_address_set_collection.rs  special_address.rs
ghidra-core/src/data/: abstract_data_type.rs  (+24 more)
ghidra-core/tests/: address_tests.rs  data_type_tests.rs  graph_tests.rs  memory_tests.rs
ghidra-debug/: Cargo.toml
ghidra-debug/src/: debug_comprehensive_port_tests.rs  debug_final_integration_test.rs  debug_final_port_test.rs  debug_final_port_tests.rs  debug_integration_test.rs  debug_new_calltree_panels_test.rs  debug_new_comprehensive_tests.rs  debug_new_modules_test.rs  debug_port_integration_test.rs  debug_port_modules_test.rs  debug_port_new_modules_test.rs  debug_remaining_comprehensive_test.rs  debug_remaining_final_test.rs  debug_remaining_gui_types_test.rs  debug_remaining_modules_final_test.rs  debug_remaining_modules_new_test.rs  debug_remaining_modules_test.rs  debug_remaining_port_test.rs  debug_schedule_integration_test.rs  lib.rs  new_port_tests.rs
ghidra-debug/tests/: debug_comprehensive_coverage.rs  debug_port_integration_tests.rs  debug_remaining_modules_integration.rs  debug_remaining_port_tests.rs
ghidra-emulation/: Cargo.toml
ghidra-emulation/src/: break_table.rs  break_table_callback.rs  breakpoints.rs  emulate_instruction_state_modifier.rs  executor.rs  lib.rs  memory.rs  memory_state.rs  pcode_arithmetic.rs  pcode_program.rs  state.rs
ghidra-emulation/tests/: emulator_tests.rs  symz3_tests.rs
ghidra-features/: Cargo.toml  libfind_option.rlib  libpdb_address_calculator.rlib  libpdb_applicator_metrics.rlib  libpdb_applicator_options.rlib  libpdb_bitfield.rlib  libpdb_categories.rlib  libpdb_kind.rlib  libpdb_program_attributes.rlib  libwrapped_data_type.rlib
ghidra-features/src/: app_util_opinion.rs  app_util_xml.rs  bin_format.rs  console.rs  exporter.rs  function.rs  importer.rs  lib.rs  objc.rs  program_util.rs  references.rs  rust.rs  sarif.rs  table_util.rs  util_bytesearch.rs
ghidra-features/tests/: base_plugins_tests.rs  bsim_query_tests.rs  crossref_comment_tests.rs  demangler_tests.rs  elf_tests.rs  equate_tests.rs  expanded_plugins_tests.rs  exporter_plugin_tests.rs  four_remaining_plugins_tests.rs  loader_framework_tests.rs  new_base_plugins_tests.rs  new_features_plugins_tests.rs  new_mapper_validator_tests.rs  new_plugins_tests.rs  pe_tests.rs  plugins_tests.rs  remaining_plugins_port_tests.rs  remaining_plugins_tests.rs
ghidra-gui/: Cargo.toml
ghidra-gui/src/: app.rs  domain_folder.rs  domain_object.rs  lib.rs  mod.rs  swing_exception_handler.rs
ghidra-gui/tests/: graph_algorithm_tests.rs  graph_framework_tests.rs  new_graph_tests.rs  theme_and_options_tests.rs
ghidra-help/: Cargo.toml
ghidra-help/src/: default_help_service.rs  help.rs  help_build_utils.rs  help_descriptor.rs  help_location.rs  help_service.rs  help_set.rs  lib.rs  path_key.rs
ghidra-processors/: Cargo.toml
ghidra-processors/src/: common.rs  lib.rs
ghidra-processors/tests/: multi_arch_tests.rs  x86_tests.rs
ghidra-pty/: Cargo.toml
ghidra-pty/src/: lib.rs  linux.rs  macos.rs  pty.rs  pty_child.rs  pty_endpoint.rs  pty_factory.rs  pty_parent.rs  pty_session.rs  shell_utils.rs  stream_pumper.rs  unix.rs  windows.rs
(+4040 files in other folders)
