[package]
name = "ghidra-rust"
version = "0.1.0"
edition = "2021"
description = "Ghidra Rust - Integration test workspace root"

[dependencies]
ghidra-build = { path = "ghidra-build" }
ghidra-core = { path = "ghidra-core" }
ghidra-debug = { path = "ghidra-debug" }
ghidra-decompile = { path = "ghidra-decompile" }
ghidra-features = { path = "ghidra-features" }
ghidra-processors = { path = "ghidra-processors" }
ghidra-emulation = { path = "ghidra-emulation" }

[workspace]
resolver = "2"
members = [
    "ghidra-app",
    "ghidra-bsim",
    "ghidra-build",
    "ghidra-core",
    "ghidra-debug",
    "ghidra-decompile",
    "ghidra-emulation",
    "ghidra-features",
    "ghidra-gui",
    "ghidra-help",
    "ghidra-processors",
    "ghidra-pty",
]

[workspace.dependencies]
# Core parsing
nom = "7"
pest = "2"
pest_derive = "2"

# Binary parsing
byteorder = "1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1"

# Hashing
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"

# Compression
flate2 = "1"
bzip2 = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }
pin-project = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Bitflags for type properties
bitflags = "2"

# Collections
indexmap = "2"
smallvec = "1"
bitvec = "1"
dashmap = "5"

# Math
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
num-derive = "0.4"

# Graph
petgraph = "0.6"

# GUI
egui = "0.29"
eframe = "0.29"
egui-winit = "0.29"
egui-wgpu = "0.29"
winit = "0.30"
wgpu = "0.20"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Regex
regex = "1"
lazy_static = "1"
once_cell = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
