[package]
name = "ghidra-build"
version = "0.1.0"
edition = "2021"
description = "Ghidra Rust - Build support: launch infrastructure, markdown conversion, skeleton templates, doclets"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
tempfile = "3"
