[package]
name = "ghidra-help"
version = "0.1.0"
edition = "2021"
description = "Ghidra Rust - Help: Online help system with TOC, search, and validation"

[dependencies]
ghidra-core = { path = "../ghidra-core" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[lints]
workspace = true
