[package]
name = "ghidra-pty"
version = "0.1.0"
edition = "2021"
description = "Ghidra Rust - Pty: Cross-platform pseudo-terminal support for process control"

[dependencies]
ghidra-core = { path = "../ghidra-core" }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "namedpipeapi", "synchapi", "handleapi", "processthreadsapi", "consoleapi", "jobapi2", "minwindef", "ntdef", "errhandlingapi"] }

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
